manifests/auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: vayer/0r9an1zz3r_auth:1.0.0
          imagePullPolicy: Always 
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: auth
  type:
    LoadBalancer
